# BassMaid

./: CHANGELOG.md  README.md
.github/workflows/: build.yml
BassMaidJUCE/: CMakeLists.txt  README.md
BassMaidJUCE/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
docs/: TECHNICAL_AUDIT.md
tests/: reference_notes.md
